# judge-model-evaluation

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: README.md
configs/examples/: cerebras_hosted_2way_free.yaml  cerebras_hosted_3way_free.yaml  full_evouna.yaml  gemma4.yaml  gemma_hosted_4way_free.yaml  local_llm.yaml  multi_provider.yaml  openai_judge.yaml  openai_small_models_4way.yaml  openai_small_models_4way_smoke.yaml
data/: README.md
docs/: PRD.md
outputs/: README.md  merged_report.html
outputs/20260421_full_evouna_example/: bootstrap_confidence_intervals.csv  config.resolved.yaml  confusion_matrices.json  dataset_meta.yaml  dummy_answer_robustness.csv  leniency_bias.csv  metrics_by_alias_count.csv  metrics_by_answer_length_bucket.csv  metrics_by_answer_source.csv  metrics_by_dataset.csv  metrics_by_human_label.csv  metrics_by_model_family.csv  metrics_overall.csv  model_rankings.csv  normalized_samples.parquet  parsed_predictions.parquet  prompt_sensitivity.csv  raw_predictions.jsonl  reference_order_sensitivity.csv  report.md  scotts_pi.csv  telemetry_manifest.json
outputs/20260421_gemma4_v1/: arize_metrics_dataset.parquet  bootstrap_confidence_intervals.csv  config.resolved.yaml  confusion_matrices.json  dataset_meta.yaml  dummy_answer_robustness.csv  leniency_bias.csv  metrics_by_alias_count.csv  metrics_by_answer_length_bucket.csv  metrics_by_answer_source.csv  metrics_by_dataset.csv  metrics_by_human_label.csv  metrics_by_model_family.csv  metrics_overall.csv  model_rankings.csv  normalized_samples.parquet  parsed_predictions.parquet  (+7 more)
(+101 files in other folders)
